feat: add endpoint de gerar os dados do relatorio, e add a rota na doc do swagger
